--- a/CatDogLoverManagement/Pages/Admin/EditService.cshtml
+++ b/CatDogLoverManagement/Pages/Admin/EditService.cshtml
@@ -132,9 +132,9 @@ else
 
 @section Scripts{
     <script>
-        var editor = new FroalaEditor('#description', {
-            imageUploadURL: '/api/images'
-        });
+        // var editor = new FroalaEditor('#description', {
+        //     imageUploadURL: '/api/images'
+        // });
 
         const featuredImageUploadElement = document.getElementById('featuredImageUpload');
         const image = document.getElementById('image');
