--- a/CatDogLoverManagement/Pages/Admin/EditAnimal.cshtml
+++ b/CatDogLoverManagement/Pages/Admin/EditAnimal.cshtml
@@ -45,7 +45,7 @@
 
                     @if (Model.BlogPost.Image != null)
                     {
-                        <img src="" id="featuredImageDisplay" style="width:300px;" />
+                        <img src="@Model.BlogPost.Image" id="featuredImageDisplay" style="width:300px;" />
                     }
                     else
                     {
